# dossier

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.github/workflows/: CI.yaml
dossier/: Cargo.toml
dossier-core/: Cargo.toml
dossier-core/src/: lib.rs
dossier-py/: Cargo.toml
dossier-py/src/: class.rs  function.rs  lib.rs  parameter.rs  symbol.rs  types.rs
dossier-ts/: Cargo.toml
dossier-ts/src/: class.rs  export_clause.rs  field.rs  function.rs  import.rs  interface.rs  lib.rs  method.rs  parameter.rs  property.rs  symbol.rs  symbol_table.rs  type_alias.rs  type_constraint.rs  type_variable.rs  types.rs
dossier-ts2/: Cargo.toml
dossier-ts2/src/: export_clause.rs  function.rs  helpers.rs  import.rs  lib.rs  property.rs  symbol.rs  symbol_table.rs  symbols.rs  type_alias.rs  type_kind.rs  types.rs
dossier/src/: main.rs
fixtures/python/: flask_config.py
scripts/: publish-to-crates-io.sh
