[package]
name = "dossier-core"
version = "0.0.2"
edition = "2021"
description = "Core library for Dossier"
license = "MPL-2.0"
repository = "https://github.com/Doctave/dossier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tree-sitter = "0.20.10"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["indexmap"] }

