[package]
name = "dossier-py"
version = "0.0.2"
edition = "2021"
description = "Python support for Dossier"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dossier-core = { path="../dossier-core" }
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"
tree-sitter-jsdoc = { git = "https://github.com/tree-sitter/tree-sitter-jsdoc.git" }
lazy_static = "1.4"
indoc = "2"

[build-dependencies]
cc="*"
