[package]
name = "dossier-ts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dossier-core = { path="../dossier-core" }
tree-sitter = "0.20.10"
tree-sitter-typescript = "0.20.3"
tree-sitter-jsdoc = { git = "https://github.com/tree-sitter/tree-sitter-jsdoc.git" }

[build-dependencies]
cc="*"
