[package]
name = "dossier-ts"
version = "0.0.4"
edition = "2021"
description = "TypeScript support for Dossier"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dossier-core = { path="../dossier-core", version="0.0.4" }
tree-sitter = "0.20.10"
tree-sitter-typescript = "0.20.3"
lazy_static = "1.4"
indoc = "2"
rayon = "1.8.0"

[build-dependencies]
cc="*"
