[package]
name = "dossier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
dossier-core = { path = "../dossier-core" }
dossier-ts = { path = "../dossier-ts" }
dossier-ts2 = { path = "../dossier-ts2" }
glob = "0.3.1"
pretty-duration = "0.1.1"
