[package]
name = "dossier"
version = "0.0.1"
edition = "2021"
description = "A multi-language source code and docstrings parser"
license = "MPL-2.0"
repository = "https://github.com/Doctave/dossier"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
dossier-core = { path = "../dossier-core" }
dossier-ts = { path = "../dossier-ts" }
dossier-py = { path = "../dossier-py" }
pretty-duration = "0.1.1"
clap = { version = "4.4.16", features = ["derive"] }
wild = "2.2.0"
